# cs6903-ssl-chat-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
certs/alice/: alice-public-key.pem  alice.crt  alice.csr
certs/bob/: bob-private-key.pem  bob-public-key.pem  bob.crt  bob.csr
certs/int/: int-private-key.pem  int-public-key.pem  int.crt  int.csr
certs/root/: root-private-key.pem  root-public-key.pem  root.crt  root.csr
include/: app.hpp  net.hpp  tui.hpp
src/: CMakeLists.txt  app.cpp  main.cpp  net.cpp  tui.cpp
